// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Experimentation Tests Event Creation should generate snapshot iCalendar 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
PRODID:--//Paqrat76//ical-generator//EN
NAME:My First iCal
X-WR-CALNAME:My First iCal
X-WR-CALDESC:This is an example iCalendar
BEGIN:VEVENT
UID:1e1e6f37-9ac4-47eb-a9ea-e19666afd322
SEQUENCE:0
DTSTAMP:20250101T050000Z
DTSTART;VALUE=DATE:20260101
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
RRULE:FREQ=YEARLY
SUMMARY:New Year's Day
TRANSP:TRANSPARENT
CATEGORIES:US FEDERAL HOLIDAY,HOLIDAY
CLASS:PUBLIC
END:VEVENT
BEGIN:VEVENT
UID:37d8aa1b-d2bc-45bf-943e-c2bd564ecbfa
SEQUENCE:0
DTSTAMP:20250101T050000Z
DTSTART;VALUE=DATE:20260119
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
RRULE:FREQ=YEARLY;WKST=SU;BYDAY=MO;BYMONTH=1;BYWEEKNO=3
SUMMARY:Martin Luther King\\, Jr. Day
TRANSP:TRANSPARENT
CATEGORIES:US FEDERAL HOLIDAY,HOLIDAY
CLASS:PUBLIC
END:VEVENT
BEGIN:VEVENT
UID:48e92d47-bdb0-4b01-8283-72bca4c34878
SEQUENCE:0
DTSTAMP:20250101T050000Z
DTSTART:20260202T010000Z
DTEND:20260202T040000Z
SUMMARY:Cook Out Clash (FOX)
TRANSP:OPAQUE
LOCATION:Bowman Grey Stadium\\nWinston Salem\\, NC
DESCRIPTION:200 laps / 50.6 miles | Track Length: 0.25 mile(s) | Track Typ
 e: Short Track | Surface: Asphalt | Banking: Turns: 4 | Caution Speed: 20 
 MPH
CATEGORIES:NASCAR CUP
CLASS:PUBLIC
END:VEVENT
END:VCALENDAR"
`;

exports[`Experimentation Tests Event Creation should generate snapshot iCalendar for complex recurrence 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
PRODID:--//Paqrat76//ical-generator//EN
NAME:My Second iCal
X-WR-CALNAME:My Second iCal
X-WR-CALDESC:This is an example iCalendar with complex recurrence
BEGIN:VEVENT
UID:1e1e6f37-9ac4-47eb-a9ea-e19666afd322
SEQUENCE:0
DTSTAMP:20250101T050000Z
DTSTART;VALUE=DATE:20260101
X-MICROSOFT-CDO-ALLDAYEVENT:TRUE
X-MICROSOFT-MSNCALENDAR-ALLDAYEVENT:TRUE
RRULE:FREQ=MONTHLY;INTERVAL=1;BYMONTHDAY=15;COUNT=10
RDATE:20250325T040000Z,20250425T040000Z
EXDATE:20250315T040000Z,20250415T040000Z
SUMMARY:First Day
TRANSP:TRANSPARENT
CATEGORIES:US FEDERAL HOLIDAY,HOLIDAY
CLASS:PUBLIC
END:VEVENT
END:VCALENDAR"
`;
